Added links to pages

--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -107,12 +107,13 @@
                 <h2>Customisable Themes</h2>
                 <p>Coding and design skills are not necessary to make your store look unique 
                     and fabulous! Shopify offers a selection of free and premium themes, all 
-                    of which are responsive and mobile-friendly. The Theme Store showcases 
+                    of which are responsive and mobile-friendly. The <a href="https://themes.shopify.com/" 
+                    target="_blank" rel="noopener noreferrer">Theme Store</a> showcases 
                     features, reviews and demos to help you choose the perfect design for your 
                     store. Use the customiser to easily edit the design, for example, adding 
                     images to a slideshow or changing fonts. Shopify gives you full access* 
                     to the theme files, so you can make further customisations by editing the 
-                    code directly. If you don’t have coding skills, however, hire an expert 
+                    code directly. If you don’t have coding skills, however, hire an <a href="/">expert</a> 
                     to do the job for you.</p>
 
                 <h2>Shopify App Store</h2>
@@ -120,7 +121,8 @@
                     However, there are many reasons why you’d want to extend the functionality 
                     of your store. You may want to integrate your store with an ESP (email 
                     ervice provider). Or, you might need to translate your store into foreign 
-                    languages. Fortunately, the Shopify App Store solves many of these problems. 
+                    languages. Fortunately, the <a href="https://appss.shopify.com/" target="_blank" 
+                    rel="noopener noreferrer">Shopify App Store</a> solves many of these problems. 
                     Within this marketplace, you can find over 4,500 apps to add features to your 
                     store. Many of these apps are free or offer a range of pricing plans to suit 
                     your budget and business size. Before purchasing an app, be sure to read the 
@@ -158,8 +160,10 @@
                 <p>In addition to the three standard plans, there are also the options of:</p>
 
                 <ul>
-                    <li>Shopify Plus, appropriate for large volume enterprises</li>
-                    <li>Shopify Lite, for selling on WordPress and other platforms.</li>
+                    <li><a href="https://www.shopify.com/plus" target="_blank" rel="noopener 
+                        noreferrer">Shopify Plus</a>, appropriate for large volume enterprises</li>
+                    <li><a href="https://www.shopify.co.uk/lite" target="_blank" rel="noopener 
+                        noreferrer">Shopify Lite</a>, for selling on WordPress and other platforms.</li>
                 </ul>
 
                 <h2>Try it Free for 14 Days</h2>
@@ -184,8 +188,10 @@
                     the best language and currency for the customer, based on their location. At 
                     the time of publishing this blog, 133 currencies are supported.</p>
 
-                <p><em>Check out the new video course, Building a Business with Shopify 2020/21, 
-                    produced in partnership with CNT Associates.</em></p>
+                <p><em>Check out the new video course, <a href="building-business-shopify.html">
+                    Building a Business with Shopify 2020/21</a>, 
+                    produced in partnership with <a href="https://cntassociates.com" target="_blank" 
+                    rel="noopener noreferrer">CNT Associates</a>.</em></p>
 
                 <div class="padding-bottom padding-top center">
                     <a class="btn-primary" href="building-business-shopify.html">View Course</a>
@@ -200,7 +206,7 @@
                     <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
-            <div class="container-1000">
+            <div class="container-1200">
                 <div class="row">
                     <div class="col-3">
                         <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="dark" 
@@ -237,7 +243,7 @@
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="images/FSB-member-logo.jpg" 
+                            <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
                             <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
