--- a/faqs.html
+++ b/faqs.html
@@ -94,43 +94,62 @@
         <div class="hero center">
             <div class="container-1000">
                 <h1>FAQs</h1>
-                <h4>Frequently asked questions</h4>
-                
+                <h4></h4>                
             </div>
         </div>
         <div class="main section">
             <div class="container-1000">
-                <p>See the list below for the answers to your frequently asked questions (FAQs).</p>
+                <div class="center">
+                    <h2>Frequently Asked Questions</h2>
+                    <hr>
+                </div>
+                <h3>How much do you charge?</h3>
+                <p>This would very much depend on the work to be carried out. Please get in touch to arrange an initial consultation, after which I can provide a detailed quote for your requirements.</p>
 
-                <p><strong>How much do you charge?</strong><br>
-                This would very much depend on the work to be carried out. Please get in touch to arrange an initial consultation, after which I can provide a detailed quote for your requirements.</p>
-
-                <p><strong>How long does the work take?</strong><br>
-                The time it takes to complete the work would depend on what is involved. A 5-page website could be completed in as little as 4-6 weeks depending on how quickly I receive the required information. In order for the work to be completed as soon as possible, please provide the required information promptly.</p>
-                <p><strong>What do I need to supply you with?</strong></p>
+                <h3>How long does the work take?</h3>
+                <p>The time it takes to complete the work would depend on what is involved. A 5-page website could be completed in as little as 4-6 weeks depending on how quickly I receive the required information. In order for the work to be completed as soon as possible, please provide the required information promptly.</p>
+                <h3>What do I need to supply you with?</h3>
                 <ul>
                     <li>Copy and content for each page</li>
-                    <li>Branding guidelines (fonts and colour scheme)</li>
+                    <li>Branding guidelines</li>
                     <li>Company logo</li>
+                    <li>Any partner logos</li>
                     <li>High quality images (if you don’t have your own images, I can provide you with links to free stock photos)</li>
+                    <li>Links to social media profiles</li>
                     <li>Links to videos</li>
-                    <li>Access to your domain and hosting</li>
+                    <li>Access to your domain and hosting (if applicable)</li>
                     <li>Examples of websites to use for inspiration</li>
                 </ul>
-                    <p>I can supply you with a link to Google Drive to place the content into, otherwise, please send me the content via email.</p>
-                <p><strong>Which platforms do you develop on?</strong><br>
-                I develop websites on WordPress, Wix, Shopify and Squarespace.</p>
-                <p><strong>Would we need to meet in person?</strong><br>
-                Until further notice, all meetings will be via Zoom (or an alternative video conferencing platform of your choice).</p>
-                <p><strong>What is the process for developing a website?</strong><br>
-                The first step would be to arrange a free consultation to discuss your requirements. After this initial meeting, I would provide you with detailed quote. If you are happy to proceed, I will send you an agreement. Once the agreement has been signed by both of us, I will proceed with the work.</p>
-                <p><strong>Can I see examples of your previous work?</strong><br>
-                Of course, please see my <a href="clients">Clients</a> page for examples of past work I have carried out for clients.</p>
-                <p><strong>What are your qualifications?</strong><br>
-                I hold an MSc in Computer Science from the University of Kent.</p>
-                <p><strong>I cannot find the answer in these FAQs. How can I contact you?</strong><br>
-                Please get in touch with me by emailing <a href="mailto:info@sybilmayard.tech">info@sybilmayard.tech</a>.</p>                                
-                
+                <p>Preferably, I would like to work with documents submitted via 
+                    <a href="https://drive.google.com" target="_blank" rel="noopener noreferrer">
+                        Google Drive</a> - I can provide you with a link to a shared folder. 
+                        Alternatively, please send me the content by email.
+                </p>
+                <h3>Which platforms do you develop on?</h3>
+                <p>I develop websites on <a href="https://wordpress.org/" target="_blank" 
+                    rel="noopener noreferrer">WordPress</a>, <a href="https://www.wix.com/" 
+                    target="_blank" rel="noopener noreferrer">Wix</a>, 
+                    <a href="https://www.shopify.co.uk/" target="_blank" rel="noopener noreferrer">
+                        Shopify</a> and <a href="https://www.squarespace.com/" target="_blank" 
+                        rel="noopener noreferrer">Squarespace</a>.</p>
+                <h3>Would we need to meet in person?</h3>
+                <p>Until further notice, all meetings will be via <a href="https://zoom.us/" 
+                    target="_blank" rel="noopener noreferrer">Zoom</a>, 
+                    <a href="https://meet.google.com/" target="_blank" 
+                    rel="noopener noreferrer">Google Meet</a>, 
+                    <a href="https://www.microsoft.com/en-gb/microsoft-365/microsoft-teams/free" 
+                    target="_blank" rel="noopener noreferrer">Microsoft Teams</a> or 
+                    <a href="https://whereby.com/" target="_blank" 
+                    rel="noopener noreferrer">Whereby</a>.</p>
+                <h3>What is the process for developing a website?</h3>
+                <p>The first step would be to arrange a free consultation to discuss your requirements. After this initial meeting, I would provide you with detailed quote. If you are happy to proceed, I will send you an agreement. Once the agreement has been signed by both of us, I will proceed with the work.</p>
+                <h3>Can I see examples of your previous work?</h3>
+                <p>Of course, please see my <a href="clients.html">Clients</a> page for examples of past work I have carried out for clients.</p>
+                <h3>What are your qualifications?</h3>
+                <p>I hold an MSc in Computer Science from the <a href="https://www.kent.ac.uk" 
+                    target="_blank" rel="noopener noreferrer">University of Kent</a>.</p>
+                <h3>I cannot find the answer to my question in these FAQs. How can I contact you?</h3>
+                <p>Please get in touch with me by emailing <a href="mailto:info@sybilmayard.tech">info@sybilmayard.tech</a>.</p>                                
             </div>
         </div>
         <div class="contact section">
@@ -140,7 +159,7 @@
                     <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
-            <div class="container-1000">
+            <div class="container-1200">
                 <div class="row">
                     <div class="col-3">
                         <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="dark" 
@@ -177,7 +196,7 @@
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="images/FSB-member-logo.jpg" 
+                            <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
                             <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
