--- a/an-android-app-for-an-educational-poker-platform.html
+++ b/an-android-app-for-an-educational-poker-platform.html
@@ -100,7 +100,9 @@
         <div class="main section">
             <div class="container-1000">
                 <h2>Play On!</h2>
-                <p>VFor my final MSc project at the University of Kent, I created an Android 
+                <p>VFor my final MSc project at the <a href="https://www.kent.ac.uk" 
+                    target="_blank" rel="noopener noreferrer">University of Kent</a>, 
+                    I created an Android 
                     app that teaches you how to play Texas Hold’em Poker. The app works by 
                     using an algorithm that calculates the player’s hand score, or probability 
                     of winning (depending on which round is currently in progress), and 
@@ -126,7 +128,7 @@
                     <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
-            <div class="container-1000">
+            <div class="container-1200">
                 <div class="row">
                     <div class="col-3">
                         <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="dark" 
@@ -163,7 +165,7 @@
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="images/FSB-member-logo.jpg" 
+                            <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
                             <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
