--- a/blog.html
+++ b/blog.html
@@ -105,7 +105,8 @@
                 <!-- <img src="images/E-commerce-online-shopping-laptop-credit-cards-and-smartphone-on-desk.jpg"> -->
                 <h2>6 Reasons Why You Should be Using Shopify</h2>
                 <p>Are you planning to sell your products or services online? Consider choosing 
-                    Shopify, one of the most popular e-commerce platforms. Here I present to you 
+                    <a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
+                        Shopify</a>, one of the most popular e-commerce platforms. Here I present to you 
                     a few of the benefits you can enjoy. Customisable Themes Coding and design 
                     skills are not necessary to make your store look unique and fabulous! Shopify 
                     offers a selection of …</p>
@@ -113,7 +114,8 @@
                 <h2>WebTip Wednesday Series Launched on Twitter</h2>
                 <p>A“WebTip Wednesday” is a new series of tweets for website development. Be 
                     sure not to miss a tweet by following Sybiltech on Twitter: 
-                    twitter.com/Sybiltech1.</p>
+                    <a href="https://twittwe.com/sybiltech1" target="_blank" rel="noopener 
+                    noreferrer">twitter.com/Sybiltech1</a>.</p>
                 <a href="webtip-wednesday-series-launched-on-twitter.html">Read More >></a>
                 <h2>5 Best Tools for Remote Working</h2>
                 <p>With an overwhelming amount of tools available today, it can be a difficult 
@@ -137,7 +139,7 @@
                     <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
-            <div class="container-1000">
+            <div class="container-1200">
                 <div class="row">
                     <div class="col-3">
                         <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="dark" 
@@ -174,7 +176,7 @@
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="images/FSB-member-logo.jpg" 
+                            <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
                             <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
