--- a/clients.html
+++ b/clients.html
@@ -115,10 +115,10 @@
                     </div>
                 </div> -->
 
-                <h2>Meitam London (Shopify)</h2>
+                <!-- <h2>Meitam London (Shopify)</h2>
                 <ul>
                     <li>Product management</li>
-                </ul>
+                </ul> -->
 
                 <h2>Pathways 21 (WordPress)</h2>
                 <ul>
@@ -135,7 +135,6 @@
                 <h2>Find the Balance (Squarespace)</h2>
                 <ul>
                     <li>Appointment scheduling (Acuity)</li>
-                    <li></li>
                     <li>Mailchimp integration</li>
                 </ul>
                 <h2>Audrey Zeitoun Coaching (Wix)</h2>
@@ -220,7 +219,7 @@
                     <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
-            <div class="container-1000">
+            <div class="container-1200">
                 <div class="row">
                     <div class="col-3">
                         <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="dark" 
@@ -257,7 +256,7 @@
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="images/FSB-member-logo.jpg" 
+                            <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
                             <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
