--- a/my-personal-portfolio.html
+++ b/my-personal-portfolio.html
@@ -113,7 +113,7 @@
                     <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
-            <div class="container-1000">
+            <div class="container-1200">
                 <div class="row">
                     <div class="col-3">
                         <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="dark" 
@@ -150,7 +150,7 @@
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="images/FSB-member-logo.jpg" 
+                            <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
                             <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
