--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -188,7 +188,7 @@
 
                 <p>We continue to process your information on this basis until you withdraw your consent or it can be reasonably assumed that your consent no longer exists.</p>
 
-                <p>You may withdraw your consent at any time by instructing us at info@sybilmayard.tech. However, if you do so, you may not be able to use our website or our services further.</p>
+                <p>You may withdraw your consent at any time by instructing us at <a href="mailto:info@sybilmayard.tech">info@sybilmayard.tech</a>. However, if you do so, you may not be able to use our website or our services further.</p>
 
                 <h3>6. Information we process for the purposes of legitimate interests</h3>
                 <p>We may process information on the basis there is a legitimate interest, either to you or to us, of doing so.</p>
@@ -422,7 +422,7 @@
                     <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
-            <div class="container-1000">
+            <div class="container-1200">
                 <div class="row">
                     <div class="col-3">
                         <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="dark" 
@@ -459,7 +459,7 @@
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="images/FSB-member-logo.jpg" 
+                            <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
                             <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
