--- a/tagnav.html
+++ b/tagnav.html
@@ -100,9 +100,13 @@
         </div>
         <div class="main section">
             <div class="container-1000">
-                <h2>Finding Your Way</h2>
-                <p>VTagNav is an app concept that was developed by two students (Asha Burathoki, 
-                    Olcay Kilincci) and I, during our time at the University of Kent. It is very 
+                    <div class="center">
+                    <h2>Finding Your Way</h2>
+                <hr>
+                </div>
+                <p>TagNav is an app concept that was developed by two students (Asha Burathoki, 
+                    Olcay Kilincci) and I, during our time at the <a href="https://www.kent.ac.uk/" 
+                    target="_blank" rel="noopener noreferrer">University of Kent</a>. It is very 
                     common for students to experience feelings of depression and isolation, 
                     especially when moving to campus for the first time. To help ease the 
                     transition, we designed TagNav: an app which helps students connect with 
@@ -113,13 +117,14 @@
                     <p>Our idea was shortlisted as finalists at several business competitions in 
                     2018, including the Business Start-Up Journey and the Big Ideas Competition.</p>
                     
-                    <p>To showcase our app idea, we created an microsite with Wix, where you can 
+                    <p>To showcase our app idea, we created a <a href="https://stm238.wixsite.com/tagnav" 
+                        target="_blank" rel="noopener noreferrer">microsite</a> where you can 
                     find out more about the project.</p>
-
-                    <img src="images/tagnav-business-start-up-journey-2018-okqzzdj79px9mskonkqveh182ivzmcixq0sxzqzchs.jpg"
-                    alt="Students reach final of start-up competition at the University of Kent">
-                    <p>Students reach final of start-up competition at the University of Kent</p>
-           
+                    <div class="center">
+                        <img src="images/tagnav-business-start-up-journey-2018-okqzzdj79px9mskonkqveh182ivzmcixq0sxzqzchs.jpg"
+                        alt="Students reach final of start-up competition at the University of Kent">
+                        <p>Students reach final of start-up competition at the University of Kent</p>
+                    </div>           
             </div>
         </div>
         <div class="contact section">
@@ -129,7 +134,7 @@
                     <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
-            <div class="container-1000">
+            <div class="container-1200">
                 <div class="row">
                     <div class="col-3">
                         <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="dark" 
@@ -166,7 +171,7 @@
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="images/FSB-member-logo.jpg" 
+                            <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
                             <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
