--- a/vidcareer.html
+++ b/vidcareer.html
@@ -94,40 +94,41 @@
         <div class="hero center">
             <div class="container-1000">
                 <h1>VidCareer</h1>
-                <h4>The recruitment platform for online career events</h4>
-                
+                <h4>The recruitment platform for online career events</h4>                
             </div>
         </div>
         <div class="main section">
             <div class="container-1000">
                 <h2>The VidCareer Story</h2>
-                <p>VidCareer has been my biggest achievement so far. It’s a start-up idea that began during my time at the University of Kent. VidCareer is a recruitment platform and social enterprise that helps small businesses connect with candidates via online career events – like careers fairs, but delivered virtually. There are clear benefits for both parties: less time and money spent on networking events, and it’s kinder to the environment too.</p>
+                <p>VidCareer has been my biggest achievement so far. It’s a start-up idea that began during my time at the <a href="https://www.kent.ac.uk/" target="_blank" rel="noopener noreferrer">University of Kent</a>. VidCareer is a recruitment platform and social enterprise that helps small businesses connect with candidates via online career events – like careers fairs, but delivered virtually. There are clear benefits for both parties: less time and money spent on networking events, and it’s kinder to the environment too.</p>
 
-                <p>For the last several months, I have been developing a fully-functional prototype platform that has helped keep my coding skills up-to-date. Please visit the VidCareer demo site to learn more about how it works.</p>
+                <p>For the last several months, I have been developing a fully-functional prototype platform that has helped keep my coding skills up-to-date. Please visit the <a href="https://www.vidcareer.com/" target="_blank" rel="noopener noreferrer">VidCareer</a> demo site to learn more about how it works.</p>
 
-                <p>I’ve designed and created the entire site from scratch, making use of a range of technologies, languages and APIs. PHP, HTML, CSS, SQL, JavaScript, Bootstrap and the GoToMeeting REST API are some of the features implemented. The platform is deployed on a cloud hosting service, Heroku.</p>
+                <p>I’ve designed and created the entire site from scratch, making use of a range of technologies, languages and APIs. PHP, HTML, CSS, SQL, JavaScript, Bootstrap and the <a href="https://developer.goto.com/GoToMeetingV1/" target="_blank" rel="noopener noreferrer">GoToMeeting REST API</a> are some of the features implemented. The platform is deployed on a cloud hosting service, <a href="https://www.heroku.com/" target="_blank" rel="noopener noreferrer">Heroku</a>.</p>
 
                 <h3>Competition Winner</h3>
                 <p>In April 2018, I was delighted to find out that I had been chosen as the winner of the Big Ideas Competition at Kent with my business idea, “Codable”, which is an online platform which helps tech companies hire the right developers. The winning prize was an all-expenses-paid trip to Virginia in the USA to pitch the idea at the finals.</p>
 
-                <p>So after several months of preparation, a fellow student, Olcay Kilincci, and I, had flown out to Virginia Tech to compete against 12 other teams from around the world at the VT Global Entrepreneur Challenge. Even though we did not win the grand prize, it was a once-in-a-lifetime experience; the entrepreneurial skills gained and connections made will no doubt be valuable in our future careers.</p>
+                <p>So after several months of preparation, a fellow student, Olcay Kilincci, and I, had flown out to <a href="https://vt.edu/" target="_blank" rel="noopener noreferrer">Virginia Tech</a> to compete against 12 other teams from around the world at the VT Global Entrepreneur Challenge. Even though we did not win the grand prize, it was a once-in-a-lifetime experience; the entrepreneurial skills gained and connections made will no doubt be valuable in our future careers.</p>
 
                 <p>After several more months of further development, I revised and rebranded the idea as “VidCareer“.</p>
 
                 <p>You can read more about my success at the following links:</p>
-                <p>
-                Big Ideas Competition Winner goes to Global Competition<br>
-                2018 VT Global Entrepreneur Challenge Finalists<br>
-                The GradPost, Winter 2018 Edition<br>
-                </p>
+
+                <ul>
+                    <li><a href="https://www.kent.ac.uk/news/society/17829/big-ideas-competition-winner-goes-to-global-competition" target="_blank" rel="noopener noreferrer">Big Ideas Competition Winner goes to Global Competition</a></li>
+                    <li><a href="http://www.vtkwglobal.com/2018/finalists" target="_blank" rel="noopener noreferrer">2018 VT Global Entrepreneur Challenge Finalists</a></li>
+                    <li><a href="/uploads/BT_127973_GradPost%20Winter%202018_FINAL_web.pdf" target="_blank" rel="noopener noreferrer">The GradPost, Winter 2018 Edition</a></li>
+                </ul>
+
                 <h2>Market Research</h2>
-                <p>I am pleased to announce that VidCareer was recently awarded grant funding from EIRA (Enabling Innovation: Research to Application) to support essential market research. If you would like to get involved in testing the platform, please email info@vidcareer.com. I am particularly interested to hear from employers and candidates in London, the East of England and the South East. The market research takes the form of 1-hour feedback sessions delivered via Zoom.</p>
+                <p>I am pleased to announce that VidCareer was recently awarded grant funding from <a href="https://eira.ac.uk/" target="_blank" rel="noopener noreferrer">EIRA</a> (Enabling Innovation: Research to Application) to support essential market research. If you would like to get involved in testing the platform, please email <a href="mailto:info@vidcareer.com">info@vidcareer.com</a>. I am particularly interested to hear from employers and candidates in London, the East of England and the South East. The market research takes the form of 1-hour feedback sessions delivered via Zoom.</p>
 
                 <p>Please download the guide below if you would like more information about the market research.</p>
                 <div class="padding-bottom padding-top">
-                    <a class="btn-primary" href="/uploads/VidCareer-Information-v2.pdf">Download VidCareer Info</a>
+                    <a class="btn-primary" href="/uploads/VidCareer-Information-v2.pdf" target="_blank">Download VidCareer Info</a>
                 </div>
-                <div class="padding-top"><a class="btn-secondary" href="https://www.vidcareer.com">Go to VidCareer</a></div>
+                <div class="padding-top"><a class="btn-secondary" href="https://www.vidcareer.com" target="_blank" rel="noopener noreferrer">Go to VidCareer</a></div>
            
             </div>
         </div>
@@ -138,7 +139,7 @@
                     <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
-            <div class="container-1000">
+            <div class="container-1200">
                 <div class="row">
                     <div class="col-3">
                         <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="dark" 
@@ -175,7 +176,7 @@
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="images/FSB-member-logo.jpg" 
+                            <img src="images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
                             <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
