Add links to clients page

--- a/clients.html
+++ b/clients.html
@@ -120,39 +120,68 @@
                     <li>Product management</li>
                 </ul> -->
 
+
                 <h2>Pathways 21 (WordPress)</h2>
                 <ul>
                     <li>Full website development</li>
                     <li>Google Analytics integration</li>
                 </ul>
+                <div class="padding-btn">
+                    <a class ="btn-secondary" href="https://pathways21.com" 
+                    target="_blank" rel="noopener noreferrer">View Client</a>
+                </div>
 
                 <h2>CNT Associates</h2>
                 <ul>
                     <li>Mailchimp integration</li>
                     <li>Website audit</li>
                 </ul>
-                
+                <div class="padding-btn">
+                    <a class ="btn-secondary" href="https://cntassociates.com"
+                    target="_blank" rel="noopener noreferrer">View Client</a>
+                </div>
+
                 <h2>Find the Balance (Squarespace)</h2>
                 <ul>
                     <li>Appointment scheduling (Acuity)</li>
                     <li>Mailchimp integration</li>
                 </ul>
+                <div class="padding-btn">
+                    <a class ="btn-secondary" href="https://www.findthebalance.co.uk"
+                    target="_blank" rel="noopener noreferrer">View Client</a>
+                </div>
+
                 <h2>Audrey Zeitoun Coaching (Wix)</h2>
                 <ul>
                     <li>Full website development</li>
                     <li>Search engine optimisation</li>
                     <li>MailerLite integration</li>
                 </ul>
+                <div class="padding-btn">
+                    <a class ="btn-secondary" href="https://www.audreyzcoaching.com"
+                    target="_blank" rel="noopener noreferrer">View Client</a>
+                </div>
+
                 <h2>Blue Horizon LNW (Bandzoogle)</h2>
                 <ul>
                     <li>Full website development</li>
                     <li>Custom domain setup</li>
                 </ul>              
+                <div class="padding-btn">
+                    <a class ="btn-secondary" href="https://www.bluehorizonlnw.com"
+                    target="_blank" rel="noopener noreferrer">View Client</a>
+                </div>
+
                 <h2>Tania Paige Designs (Shopify)</h2>
                 <ul>
                     <li>Search engine optimisation</li>
                     <li>Design improvements</li>
                 </ul>
+                <div class="padding-btn">
+                    <a class ="btn-secondary" href="https://www.taniapaigedesigns.org"
+                    target="_blank" rel="noopener noreferrer">View Client</a>
+                </div>
+
                 <h2>New Haw Community Centre (WordPress)</h2>
                 <ul>
                     <li>Theme refresh</li>
@@ -160,6 +189,11 @@
                     <li>Search engine optimisation</li>
                     <li>Blog publishing</li>
                 </ul>
+                <div class="padding-btn">
+                    <a class ="btn-secondary" href="https://newhawcommunitycentre.co.uk"
+                    target="_blank" rel="noopener noreferrer">View Client</a>
+                </div>
+
                 <h2>Esme Learning Solutions (Shopify)</h2>
                 <ul>
                     <li>General website maintenance</li>
@@ -169,7 +203,12 @@
                     <li>User acceptance testing</li>
                     <li>Page creation in Shogun</li>
                     <li>Course registration form</li>
-                </ul>               
+                </ul>      
+                <div class="padding-btn">
+                    <a class ="btn-secondary" href="https://esmelearning.com"
+                    target="_blank" rel="noopener noreferrer">View Client</a>
+                </div>
+
                 <h2>Future Communities UK (WordPress)</h2>
                 <ul>
                     <li>Website audit</li>
@@ -177,34 +216,64 @@
                     <li>Search engine optimisation</li>
                     <li>Google Analytics integration</li>
                     <li>Mailchimp integration</li>
-                </ul>               
+                </ul>   
+                <div class="padding-btn">
+                    <a class ="btn-secondary" href="https://future-communities.org.uk"
+                    target="_blank" rel="noopener noreferrer">View Client</a>
+                </div>
+
                 <h2>Wardell's Wardrobe (Shopify)</h2>
                 <ul>
                     <li>Colour swatches</li>
                     <li>Search engine optimisation</li>
-                </ul>                
+                </ul>  
+                <div class="padding-btn">
+                    <a class ="btn-secondary" href="https://wardellswardrobe.com"
+                    target="_blank" rel="noopener noreferrer">View Client</a>
+                </div>
+
                 <h2>The GDPR Compliance Consultancy (WordPress)</h2>
                 <ul>
                     <li>Website maintenance</li>
                     <li>Theme refresh</li>
                     <li>Theme customisations</li>
-                </ul>                
+                </ul>        
+                <div class="padding-btn">
+                    <a class ="btn-secondary" href="https://thegdprcomplianceconsultancy.co.uk"
+                    target="_blank" rel="noopener noreferrer">View Client</a>
+                </div>
+
                 <h2>SwipSearch (Wix)</h2>
                 <ul>
                     <li>Full website development</li>
                     <li>Landing page design</li>
                 </ul>
+                <div class="padding-btn">
+                    <a class ="btn-secondary" href="https://stm238.wixsite.com/swipsearch"
+                    target="_blank" rel="noopener noreferrer">View Client</a>
+                </div>
+
                 <h2>KYOSK (Shopify)</h2>
                 <ul>
                     <li>Full website development</li>
                     <li>Theme customisations</li>
                     <li>Image gallery carousel with Slick</li>
                     <li>Chatbot setup (Tidio)</li>
-                </ul>             
+                </ul>          
+                <div class="padding-btn">
+                    <a class ="btn-secondary" href="https://kyosk.co"
+                    target="_blank" rel="noopener noreferrer">View Client</a>
+                </div>
+
                 <h2>Focus on Learning (Squarespace)</h2>
                 <ul>
                     <li>Website audit</li>
                 </ul>
+                <div class="padding-btn">
+                    <a class ="btn-secondary" href="https://focusonlearning.co.uk"
+                    target="_blank" rel="noopener noreferrer">View Client</a>
+                </div>
+
                 <p>Find out how I can help your business grow further today.</p>
 
                 <div class="padding-bottom padding-top center">
