--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </div>
         </div>
         <div class="testimonials section grey">
-            <div class="container-1200">
+            <div class="container-1000">
                 <h2 class="center">My Happy Clients!</h2>
                 <hr>
                 <div class="row">
@@ -185,38 +185,40 @@
                             <p>It was a pleasure to work with Sybil to create my Shopify website. 
                                 She has excellent technical skills and is very client-oriented: she 
                                 always asked for my feedback and communicated so I had regular updates
-                                 on what was achieved and estimated timelines to manage my 
-                                 expectations. She is always looking to learn and improve and is a
-                                  hard worker. I would recommend her to anyone looking for a partner 
-                                  to nail your website!</p>
+                                on what was achieved and estimated timelines to manage my 
+                                expectations. She is always looking to learn and improve and is a
+                                hard worker.<br>I would recommend her to anyone looking for a partner 
+                                to nail your website!</p>
                             <div class="center">
                                 <img src="images/KYOSK-Logo.png" alt="KYOSK logo">
                             </div>
                             <h4>Shaheen Javid</h4>
-                            <p class="center">CEO, KYOSK</p>
+                            <p class="center">CEO,<br>
+                                KYOSK</p>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="shadow-box center">                            
-                            <p>Sybil is an outstanding, diligent and dedicated professional, who is
-                                 not only highly knowledgeable, but is also a delight to work with!
-                                  She provided my organisation with a website audit and I was simply
-                                   thrilled with the results! The audit was very clearly (and 
-                                   logically) laid out so I knew exactly what to do to rectify 
-                                   issues, especially thanks to her plain English non-technical 
-                                   explanations. I would highly recommend Sybil and her company’s 
-                                   services to anyone!</p>
+                            <p>Sybil is an diligent and dedicated professional, who is
+                                not only highly knowledgeable, but is also a delight to work with!
+                                She provided my organisation with a website audit and I was simply
+                                thrilled with the results! The audit was very clearly (and logically) laid 
+                                out so I knew exactly what to do to rectify 
+                                issues, especially thanks to her plain English non-technical 
+                                explanations. I would highly recommend Sybil’s 
+                                services to anyone!</p>
                             <div class="center">
                                 <img src="images/Focus-on-Learning-logo.png" alt="Focus on Learning logo">
                             </div>
                             <h4>Freddie Ryder</h4>
-                            <p class="center">CEO, Focus on Learning</p>
+                            <p class="center">CEO,<br>
+                                Focus on Learning</p>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="shadow-box center">                            
                             <p>I have been working with Sybil on a range of digital 
-                                service projects. I would highly recommend her, she is highly 
+                                service projects. I would recommend her, she is highly 
                                 skilled and communicates digital service issues in a way that is 
                                 jargon-free and understandable. She has delivered all the work she 
                                 has taken on for us within the agreed timescale and within budget. 
@@ -226,7 +228,8 @@
                                 <img src="images/Future-Communities-UK-Logo.png" alt="Future Communities UK logo">
                             </div>
                             <h4>Gary Parker</h4>
-                            <p class="center">Director, Future Communities UK</p>
+                            <p class="center">Director,<br>
+                                Future Communities UK</p>
                         </div>
                     </div>
                     <div class="col-6">
@@ -234,14 +237,15 @@
                             <p>Sybil is extremely thorough and pays great attention to details she 
                                 will adapt to your specific needs. She has helped me choose a 
                                 platform for my domain name and website and is now helping me build 
-                                the actual website for my business. I will definitely recommend 
+                                the actual website for my business.<br><br>I will definitely recommend 
                                 Sybil to anyone wanting a high quality, personalised and reasonably 
                                 priced service. Her work is top class!</p>
                             <div class="center">
                                 <img src="images/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching logo">
                             </div>
                             <h4>Audrey Zeitoun</h4>
-                            <p class="center">Life Transitions Coach, Audrey Zeitoun Coaching</p>
+                            <p class="center">Life Transitions Coach,<br>
+                                Audrey Zeitoun Coaching</p>
                         </div>
                     </div>
                 </div>
